--- a/css/styles.css
+++ b/css/styles.css
@@ -8,5 +8,10 @@ h1 {
 }
 
 input {
-  margin-top: 40px;
+  margin-top: 40px !important;
+  width: 100% !important;
+}
+
+h3 {
+  margin-top: 20px !important;
 }
