add purchase button to subract form volume.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,6 @@ h3 {
 
 .kegInfo {
   font-size: 20px;
-  color: #4B717F;
-  text-shadow: .5 .5 grey;
+  color: #fff5a0;
+  text-shadow: 5px 5px 5px black;
 }
